--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,12 +1,12 @@
 production:
-  nick: ow_calc
+  nick: ow_calc_v3
   server: irc.rizon.net
   password: helloword
-  channels: ['#PTT_Formosa', '#TW_Armed_Mobs', '#roc', '#ROCAS', '#s.p.a', '#ealb']
+  channels: [ '#PTT_Formosa', '#roc', '#ROCAS','#lother']
   admin_password: hello
 
 development:
-  nick: ow_calc_test
+  nick: ow_calc_test_l
   server: irc.mibbit.net
   password:
   channels: ['#ow_calc_test']
