增加@fc 100up: +10% booster: -b +50% -B +100% 設定, 死亡人口判斷, 修正下一軍階點數判斷

--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,13 +1,13 @@
 production:
-  nick: ow_calc
+  nick: ow_calc_v3
   server: irc.rizon.net
   password: 
   channels: [ '#PTT_Formosa', '#roc', '#ROCAS']
   admin_password: 
 
 development:
-  nick: ow_calc_test_l
-  server: irc.mibbit.net
+  nick: ow_calc_test
+  server: irc.rizon.net
   password:
-  channels: ['#ow_calc_test']
+  channels: ['#lother']
   admin_password: 
