加入時間查詢,信件通知,ID錯誤處理,無TP欄位時例外處理,call voiced已上權限者,@fc單位,@fc help,@fc千分位顯示

--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,13 +1,13 @@
 production:
   nick: ow_calc_v3
   server: irc.rizon.net
-  password: 
-  channels: [ '#PTT_Formosa', '#roc', '#ROCAS']
+  password: test
+  channels: [ '#PTT_Formosa', '#roc', '#ROCAS' , '#lother']
   admin_password: 
 
 development:
   nick: ow_calc_test
-  server: irc.rizon.net
+  server: irc.eu.mibbit.net
   password:
   channels: ['#lother']
   admin_password: 
